@@ -5,6 +5,8 @@ use File::Temp;
 use Helpers;
 use Test;
 
+use Bailador::CLI;
+
 plan 10;
 
 my $dir = tempdir();
@@ -18,16 +20,12 @@ diag "PERL6LIB=" ~ (%*ENV<PERL6LIB> // '');
 # $*EXECUTABLE   -> /home/travis/.rakudobrew/bin/../moar-nom/install/bin/perl6
 # want to append -> /home/travis/.rakudobrew/moar-nom/install/share/perl6/site/bin';
 #                ->$*EXECUTABLE.parent.parent.child('share/perl6/site/bin')
-diag "PATH=" ~  %*ENV<PATH>;
-
-%*ENV<PATH> ~= ':' ~ $*EXECUTABLE.parent.parent.child('share/perl6/site/bin');
-
-# diag QX('which prove6');
+#diag "PATH=" ~  %*ENV<PATH>;
 
 subtest {
     plan 2;
 
-    my $p = run $*EXECUTABLE, "-I$git_dir/lib", $git_dir.IO.child('bin').child('bailador'), :out, :err;
+    my $p = run-executable-with-includes("-I$git_dir/lib", $git_dir.IO.child('bin').child('bailador'), :out, :err);
     is $p.err.get, 'Usage:' or diag "Rest of STDERR:\n" ~ $p.err.slurp;
     is $p.out.get, Nil;
     #diag $p.out.slurp: :close;
@@ -36,7 +34,7 @@ subtest {
 subtest {
     plan 2;
 
-    my $p = run $*EXECUTABLE, "-I$git_dir/lib", $git_dir.IO.child('bin').child('bailador'), 'new', :out, :err;
+    my $p = run-executable-with-includes("-I$git_dir/lib", $git_dir.IO.child('bin').child('bailador'), 'new', :out, :err);
     is $p.out.get, '--name=Project-Name is a required parameter' or diag "Rest of STDERR:\n" ~ $p.err.slurp;
     is $p.err.get, Nil;
     #diag $p.out.slurp: :close;
@@ -47,7 +45,7 @@ subtest {
 subtest {
     plan 7;
 
-    my $p = run $*EXECUTABLE, "-I$git_dir/lib", $git_dir.IO.child('bin').child('bailador'), '--name=App-Name', 'new', :out, :err;
+    my $p = run-executable-with-includes("-I$git_dir/lib", $git_dir.IO.child('bin').child('bailador'), '--name=App-Name', 'new', :out, :err);
     my $out = $p.out.slurp: :close;
     is $out, q{Generating App-Name
 bin/app.pl6
@@ -75,7 +73,7 @@ views/index.html
 subtest {
     plan 2;
 
-    my $p = run $*EXECUTABLE, "-I$git_dir/lib", $git_dir.IO.child('bin').child('bailador'), '--name=App-Name', 'new', :out, :err;
+    my $p = run-executable-with-includes("-I$git_dir/lib", $git_dir.IO.child('bin').child('bailador'), '--name=App-Name', 'new', :out, :err);
     my $out = $p.out.slurp: :close;
     is $out, q{Generating App-Name
 App-Name already exists. Exiting.
@@ -87,7 +85,7 @@ App-Name already exists. Exiting.
 subtest {
     plan 7;
 
-    my $p = run $*EXECUTABLE, "-I$git_dir/lib", $git_dir.IO.child('bin').child('bailador'), 'new', '--name=Foo-Bar', :out, :err;
+    my $p = run-executable-with-includes("-I$git_dir/lib", $git_dir.IO.child('bin').child('bailador'), 'new', '--name=Foo-Bar', :out, :err);
     my $out = $p.out.slurp: :close;
     is $out, q{Generating Foo-Bar
 bin/app.pl6
@@ -119,16 +117,25 @@ subtest {
     plan 3;
 
     chdir 'App-Name';
-    temp %*ENV<PERL6LIB> = "$git_dir/lib";
-    my $p = run 'prove6', '-l', :out, :err;
-    my $exitcode = $p.exitcode;
-    is $exitcode, 0, 'program terminated successfully';
-    # diag "exitcode: " ~ $exitcode;
-    my $out = $p.out.slurp: :close;
-    like $out, rx:s/Result\: PASS/;
-    # diag $out;
-    my $err = $p.err.slurp: :close;
-    is $err, '';
+    # temp %*ENV<PERL6LIB> = join(':', "$git_dir/lib", |get-path-from-repo());
+    # diag %*ENV<PERL6LIB>;
+    # my @includes = map { "-I=" ~ $_ } ("$git_dir/lib", |get-path-from-repo());
+    my $prove6 = $*EXECUTABLE.parent.parent.child('share/perl6/site/bin/prove6');
+    if $prove6.IO.e {
+        todo 'https://github.com/perl6/tap-harness6/issues/18', 3;
+        # my $p = run($prove6, |@includes '-l', :out, :err);
+        my $p = run($prove6, "-I=$git_dir/lib", '-l', :out, :err);
+        my $exitcode = $p.exitcode;
+        is $exitcode, 0, 'program terminated successfully';
+        # diag "exitcode: " ~ $exitcode;
+        my $out = $p.out.slurp: :close;
+        like $out, rx:s/Result\: PASS/;
+        # diag $out;
+        my $err = $p.err.slurp: :close;
+        is $err, '';
+    } else {
+        skip 'prove6 is not available - you need to install Tap::Harness before Baialdor installs it as a dependency', 3;
+    }
     # diag $err;
     chdir '..';
 }, 'test newly generated app with its test cases';
@@ -141,7 +148,8 @@ subtest {
 
     my $port = 5007;
     my @args = "--config=host:0.0.0.0,port:$port", "-w={$git_dir.IO.child('t').child('views')}", 'watch', 'bin/app.pl6';
-    my $server = Proc::Async.new($*EXECUTABLE, "-I$git_dir/lib", $git_dir.IO.child('bin').child('bailador'), @args);
+    my @includes = repo-to-includes();
+    my $server = Proc::Async.new($*EXECUTABLE, "-I$git_dir/lib", |@includes, $git_dir.IO.child('bin').child('bailador'), |@args);
     $server.stdout.tap; # : -> $s {say "out: ", $s};
     $server.stderr.tap; # : -> $s {say "err: ", $s};
     $server.start;
@@ -171,7 +179,8 @@ subtest {
 
     my $port = 5006;
     my @args = "--config=host:0.0.0.0,port:$port", "-w={$git_dir.IO.child('t').child('views')}", 'watch', 'root.pl6';
-    my $server = Proc::Async.new($*EXECUTABLE, "-I$git_dir/lib", $git_dir.IO.child('bin').child('bailador'), @args);
+    my @includes = repo-to-includes();
+    my $server = Proc::Async.new($*EXECUTABLE, "-I$git_dir/lib", |@includes, $git_dir.IO.child('bin').child('bailador'), |@args);
     $server.stdout.tap; # : -> $s {say "out: ", $s};
     $server.stderr.tap; # : -> $s {say "err: ", $s};
     $server.start;
@@ -196,7 +205,8 @@ subtest {
     my $port = 5005;
     my @args = "--config=host:0.0.0.0,port:$port", "-w={$git_dir.IO.child('t').child('views')}", 'watch',
                ~ $git_dir.IO.child('t').child('apps').child('app.pl6');
-    my $server = Proc::Async.new($*EXECUTABLE, "-I$git_dir/lib", $git_dir.IO.child('bin').child('bailador'), @args);
+    my @includes = repo-to-includes();
+    my $server = Proc::Async.new($*EXECUTABLE, "-I$git_dir/lib", |@includes, $git_dir.IO.child('bin').child('bailador'), |@args);
     $server.stdout.tap; #: -> $s {say "out: ", $s};
     $server.stderr.tap; #: -> $s {say "err: ", $s};
     $server.start;
@@ -214,7 +224,7 @@ subtest {
 
 subtest {
     plan 1;
-    my $p = run $*EXECUTABLE, "-I$git_dir/lib", $git_dir.IO.child('bin').child('bailador'), 'routes', "$git_dir/examples/prefix.pl6", :out, :err;
+    my $p = run-executable-with-includes("-I$git_dir/lib", $git_dir.IO.child('bin').child('bailador'), 'routes', "$git_dir/examples/prefix.pl6", :out, :err);
 
     my $exitcode = $p.exitcode;
     is $exitcode, 0, 'program terminated successfully';
