@@ -1,3 +1,5 @@
+    - Ticket #224 - installation of Bailador as a dependency does not longer fail
+
 0.0.9 2017.07.28
     - Ticket #208 - It is now possible to render without a content type, default values for content-types can be configured.
     - Ticket #116 - Added &to-json to be exported via Bailador
